--- a/index.html
+++ b/index.html
@@ -2,28 +2,41 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الذكاء البصري - Web OCR</title>
+  <title>الذكاء البصري - Web OCR + تحليل ذكي</title>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@2.1.4/dist/tesseract.min.js"></script>
   <style>
     body { font-family: 'Cairo', sans-serif; text-align: center; padding: 20px; background: #f4f4f4; }
     h1 { color: #2c3e50; }
     input[type=file] { margin: 20px; }
-    #output { white-space: pre-wrap; background: #fff; padding: 15px; border-radius: 10px; margin-top: 20px; text-align: right; }
+    #output, #aiResult {
+      white-space: pre-wrap;
+      background: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 20px;
+      text-align: right;
+    }
     #loading { display: none; color: green; font-weight: bold; }
+    #aiResult.success { background: #dff0d8; color: #3c763d; font-weight: bold; }
+    #aiResult.warning { background: #fcf8e3; color: #8a6d3b; font-weight: bold; }
+    #aiResult.danger { background: #f2dede; color: #a94442; font-weight: bold; }
   </style>
 </head>
 <body>
 
-  <h1>📷 أداة الذكاء البصري - OCR</h1>
-  <p>قم برفع صورة تحتوي على نص، وسنقوم باستخراج النص تلقائيًا.</p>
+  <h1>📷 Web OCR + الذكاء التحليلي</h1>
+  <p>ارفع صورة تحتوي على نتائج لعبة، وسنقوم بتحليلها ذكيًا.</p>
 
   <input type="file" id="imageInput" accept="image/*">
-  <div id="loading">جارٍ التحليل، انتظر لحظة...</div>
-  <div id="output">النص سيظهر هنا بعد التحليل.</div>
+  <div id="loading">🔍 جارٍ التحليل الذكي...</div>
+
+  <div id="output">📄 النص المستخرج سيظهر هنا.</div>
+  <div id="aiResult">🤖 التحليل الذكي سيظهر هنا.</div>
 
   <script>
     const imageInput = document.getElementById('imageInput');
     const outputDiv = document.getElementById('output');
+    const aiResultDiv = document.getElementById('aiResult');
     const loading = document.getElementById('loading');
 
     imageInput.addEventListener('change', () => {
@@ -32,21 +45,51 @@
 
       loading.style.display = 'block';
       outputDiv.textContent = '';
+      aiResultDiv.textContent = '';
+      aiResultDiv.className = '';
 
       Tesseract.recognize(
         file,
-        'ara+eng', // دعم اللغة العربية والإنجليزية
-        {
-          logger: m => console.log(m)
-        }
+        'ara+eng',
+        { logger: m => console.log(m) }
       ).then(({ data: { text } }) => {
         loading.style.display = 'none';
-        outputDiv.textContent = text.trim() || 'لم يتم التعرف على أي نص.';
+        const cleanedText = text.trim();
+        outputDiv.textContent = cleanedText || 'لم يتم التعرف على أي نص.';
+
+        // تحليل النص باستخدام ذكاء بسيط مبدئي
+        const decision = analyzeText(cleanedText);
+        aiResultDiv.textContent = decision.message;
+        aiResultDiv.className = decision.level;
       }).catch(err => {
         loading.style.display = 'none';
         outputDiv.textContent = 'حدث خطأ أثناء التحليل: ' + err.message;
       });
     });
+
+    // مكون Decision AI - تحليلي ذكي مبدئي
+    function analyzeText(text) {
+      const lower = text.toLowerCase();
+      if (lower.includes("crash") || lower.includes("x")) {
+        if (lower.includes("1.0x") || lower.includes("1.2x")) {
+          return { message: "⚠️ التحليل: نسبة الانفجار منخفضة - يُفضل التوقف مؤقتًا.", level: "danger" };
+        } else if (lower.includes("2.0x") || lower.includes("3.0x")) {
+          return { message: "✅ التحليل: هناك فرصة متوسطة - راقب جيدًا.", level: "warning" };
+        } else if (lower.includes("5.0x") || lower.includes("7.0x")) {
+          return { message: "🔥 التحليل: انفجار عالي! قد تكون الفرصة القادمة قوية.", level: "success" };
+        }
+      }
+
+      if (lower.includes("mines") || lower.includes("bomb") || lower.includes("💣")) {
+        return { message: "🎯 التحليل: تم اكتشاف نتائج لعبة Mines، جاري التحسين...", level: "warning" };
+      }
+
+      if (lower.length < 10) {
+        return { message: "📭 لم يتم التعرف على نتائج مفهومة. يرجى رفع صورة أوضح.", level: "danger" };
+      }
+
+      return { message: "📊 لا يمكن تحديد نوع اللعبة بدقة، جاري التعلم...", level: "warning" };
+    }
   </script>
 
 </body>
